--- a/samples/photo_album_with_jquery/tsconfig.json
+++ b/samples/photo_album_with_jquery/tsconfig.json
@@ -9,5 +9,8 @@
     "removeComments": false,
     "noImplicitAny": false,
     "suppressImplicitAnyIndexErrors": true
-  }
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
